fixed the error in mydata.pug

--- a/views/mydata.pug
+++ b/views/mydata.pug
@@ -2,4 +2,4 @@ extends layout
 
 block content
   h1= title
-  p Welcome to #{I find immense joy and fulfillment in the simple pleasures of life.}
+  p I find immense joy and fulfillment in the simple pleasures of life.
